# compressionkit

./: README.md  ecg-compression.py  main.py  pyproject.toml
.devcontainer/: install.sh
compression_kit/callbacks/: __init__.py  temperature_anneal.py
compression_kit/layers/: __init__.py  gumbel_softmax_bottleneck.py  residual_vector_quantizer.py  vector_quantizer.py
compression_kit/trainers/: __init__.py  gs_autoencoder.py  vq_autoencoder.py
